<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/white_logo"
        android:layout_marginTop="90dp"/>


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/apped_merch_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="14sp"
        android:gravity="start|center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:theme="@style/white_AppCompatEditText"
        android:text="@string/dummy_id"
        android:hint="@string/user_id_label">
        <requestFocus/>
    </android.support.v7.widget.AppCompatEditText>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/apped_merch_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apped_merch_name"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="14sp"
        android:maxLines="2"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:theme="@style/white_AppCompatEditText"
        android:hint="@string/pass_label"
        android:text="@string/dummy_pass" >
        <requestFocus/>
    </android.support.v7.widget.AppCompatEditText>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/apped_merch_pass"
        >
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:textSize="18sp"
            android:theme="@style/white_Button"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>




</RelativeLayout>